<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/logo_luce"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:textColor="@color/purple"/>

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="@color/lightgray"/>
    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:background="@drawable/botaoinicial"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/semConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semConta"
        android:gravity="center_horizontal"
        android:textColor="@color/lightgray"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/cadastrar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/cadastrar"
        android:layout_gravity="center"
        android:background="@drawable/botaoinicial"
        android:textColor="@color/white"/>


</LinearLayout>
