<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/yellow"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/logo_luce"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textColor="@color/purple"/>

        <TextView
            android:id="@+id/subtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitulo"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/lightgray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/somos"
            android:textSize="20dp"
            android:textColor="@color/roxo"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textDirection="firstStrong"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desenvolvido"
            android:textSize="20dp"
            android:textColor="@color/purple"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textDirection="firstStrong"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Anny"
            android:textSize="20dp"
            android:textColor="@color/lightgray"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textDirection="firstStrong"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Brenda"
            android:textSize="20dp"
            android:textColor="@color/lightgray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textDirection="firstStrong"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Euclides"
            android:textSize="20dp"
            android:textColor="@color/lightgray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textDirection="firstStrong"/>

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>