<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Cadastro"
        android:textColor="@color/darkred"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="@color/darkred"
            android:textColorHint="@color/gray"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_luce" />
    </LinearLayout>

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginRight="70dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        android:textColor="@color/darkred"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"/>
    <EditText
        android:id="@+id/senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/darkred"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"/>
    <EditText
        android:id="@+id/confirmar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirmar"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/darkred"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/voltar"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/teste"
            android:text="Voltar"/>
        <Button
            android:id="@+id/cadastrar"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/teste"
            android:text="@string/cadastrar" />
    </LinearLayout>


</LinearLayout>