<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/CadastroC"
        android:textColor="@color/purple"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/nomeC"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:singleLine="false"
        android:textColor="@color/purple"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <Button
            android:id="@+id/voltarC"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/botaoinicial"
            android:text="Voltar"/>
        <Button
            android:id="@+id/cadastrarC"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/botaoinicial"
            android:text="@string/cadastrarC" />
    </LinearLayout>


</LinearLayout>