<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@color/white">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/yellow"
    app:layout_constraintTop_toTopOf="parent"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">
    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Questão 0"
        android:textSize="27dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/green"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:textColor="@color/purple2"
        android:text="@string/indicadorNome"
        android:gravity="center" />

    <TextView
        android:id="@+id/Pergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textDirection="firstStrong"
        android:textSize="20dp"
        android:text="@string/pergunta"
        android:textColor="@color/purple"/>

    <RadioGroup
        android:id="@+id/GrupoResposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/resposta1"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/resposta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resposta"
            android:textColor="@color/roxo"
            android:textAlignment="center"
            android:textDirection="firstStrong"/>
        <RadioButton
            android:id="@+id/resposta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resposta"
            android:textColor="@color/roxo"/>
        <RadioButton
            android:id="@+id/resposta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resposta"
            android:textColor="@color/roxo"/>

    </RadioGroup>

    <Button
        android:id="@+id/proxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:background="@drawable/botaoinicial"
        android:text="@string/proxima"/>

</LinearLayout>


<ImageView
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/yellow"
    app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>