<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo_luce" />

    <TextView
        android:id="@+id/nomeLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/subtitulo"
        android:textColor="@color/lightgray"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/purple"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Digite seu email"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColor="@color/purple"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"/>

    <EditText
        android:id="@+id/senhalogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Digite sua senha"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/purple"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"/>

    <Button
        android:id="@+id/esqueceue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="Esqueceu a senha?"
        android:textColor="@color/gray"
        android:shadowColor="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/voltarPrincipal"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/botaoinicial"
            android:text="Voltar"/>
        <Button
            android:id="@+id/entrar"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/botaoinicial"
            android:text="@string/login" />
    </LinearLayout>


</LinearLayout>